@@ -10,7 +10,6 @@ import com.github.novicezk.midjourney.support.TaskCondition;
 
 import java.time.Duration;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 public class InMemoryTaskStoreServiceImpl implements TaskStoreService {
@@ -42,7 +41,7 @@ public class InMemoryTaskStoreServiceImpl implements TaskStoreService {
 
 	@Override
 	public List<Task> list(TaskCondition condition) {
-		return StreamUtil.of(this.taskMap.iterator()).filter(condition).collect(Collectors.toList());
+		return StreamUtil.of(this.taskMap.iterator()).filter(condition).toList();
 	}
 
 	@Override
